stylesheet.css
@font-face 
{
    font-family: 'republic';
    src: url('republic-heavy.woff') format('woff');
}

@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

:root {
    --color-background: #000000;
    --color-header: #DCE3E8;
    --color-paragraph: #FD30A7;
    --color-button-hollow-default: #839098;
    --color-button-hollow-selected-fg: #000000;
    --color-button-hollow-selected-bg: #FD30A7;
    --color-button-opaque-selected-bg: #FD30A7;
    --color-button-opaque-selected-fg: #000000;
    --color-button-opaque-hover-bg: #839098;
    --color-button-opaque-hover-fg: #191919;
    --color-button-opaque-default-bg: #191919;
    --color-button-opaque-default-fg: #839098;
    --color-tile-bg: #000000;
    --color-tile-fg: #DCE3E8;
    --color-scrollbar: #FD30A7;
    --color-scrollbar-thumb: #000000;
    --color-link: #FD30A7;
    --cscale: max(8px, min(1vw, 2vmin));
    --cscale-margin: calc(0.25 * var(--cscale));
    --cscale-edge: calc(0.12 * var(--cscale));
}

body.root
{
    background-color: var(--color-background);

    display: flex; 
    flex-direction: column;

    position: absolute;
    overflow: hidden;
    vertical-align: top;
    margin-left: calc(2.5 * var(--cscale));
    margin-right: calc(2.5 * var(--cscale));
    left: 0px;
    right: 0px;
    min-height: 100%;
    max-width: 200vmin;

    user-select: none;
}

body.panel 
{
    background-color: transparent;

    overflow-x: hidden;
    overflow-y: visible;
    margin-top: 0px;
    margin-left: 0px;
}

body.tile 
{
    background-color: transparent;

    overflow: hidden;
    margin: 0px;
    width: 100%;
    height: 100%;
}

body::-webkit-scrollbar 
{
    background-color: var(--color-scrollbar);
    width: 4px;
}

body::-webkit-scrollbar-track
{
}

body::-webkit-scrollbar-thumb
{
    background-color: var(--color-scrollbar-thumb);
}

h1 
{
    color: var(--color-header);

    font-family: republic;
    font-size: max(24px, 4vmin);
    margin-bottom: 0px;
    margin-top: calc(2.5 * var(--cscale));
    letter-spacing: min(-2px, -0.15vmin);
    white-space: nowrap;
}

h2
{
    color: inherit;
    background-color: transparent;
    white-space:pre;

    font-family: republic;
    font-size: calc(1.0 * var(--cscale));

    position: absolute;
    margin-block: 0%;
    bottom: 0.2em;
    left: 0.5em;

    user-select:none;
}

h3
{
    color: inherit;
    background-color: transparent;

    font-family: republic;
    font-size: calc(1.0 * var(--cscale));

    position:absolute;
    margin-block:0%;
    bottom:0%;
    left:0.25em;
}

p 
{
    color: var(--color-paragraph);

    font-family: "Roboto", sans-serif;
    font-size: max(12px, 1.75vmin);

    white-space: nowrap;
    height: 100%;
    margin: 0%;
    margin-left:2px;
}

p2 
{
    color: var(--color-tile-text);

    font-family: "Roboto Mono", monospace;
    font-size: var(--cscale);
	letter-spacing: calc(-0.025 * var(--cscale));
    line-height: calc(1.5 * var(--cscale));
    position: absolute;
    top: calc(2 * var(--cscale));
    left: calc(2.5 * var(--cscale));
    max-width: 40%;
}

a 
{
    color:  var(--color-link);
}

.pButton
{
    color: var(--color-button-hollow-default);
    background-color: var(--color-button-hollow-default);
    
    box-sizing:border-box;
    display: inline-block; 
    font-family: republic;

    vertical-align:bottom;
    width: calc(8 * var(--cscale));
    height:calc(2 * var(--cscale));
    margin-top:calc(0.5 * var(--cscale));
    margin-right:var(--cscale-margin);
    padding: var(--cscale-edge);

    clip-path: polygon(90% 0, 95% 10%, 100% 10%, 100% 100%, 0 100%, 0 0);
}

.pButton:hover
{
    margin-top:0%;
    height: calc(2.5 * var(--cscale));
}

.pButtonInside
{
    color: inherit;
    background-color: var(--color-background);
    
    position:relative;
    box-sizing:border-box;
    font-family: inherit;
    width:100%;
    height:100%;

    clip-path: polygon(91% 0, 96% 10%, 100% 10%, 100% 100%, 0 100%, 0 0);
}

.tileButton 
{
    color: var(--color-button-opaque-default-fg);
    background-color: var(--color-button-opaque-default-bg);

    display: inline-grid;
    position: relative;
    width: calc(16 * var(--cscale) + var(--cscale-margin));
    height: calc(2 * var(--cscale));   
    margin-bottom:0%;
    margin-right: calc(0.14 * var(--cscale));

    clip-path: polygon(0 0, 0 20%, 0 20%, 0 100%, 0 100%, 0 0);
	animation: ClipIn_Left_TileButton 0.3s 0.0s 1 normal forwards;
}

.tileButton:hover 
{
    background-color: var(--color-button-opaque-hover-bg) !important;
    color: var(--color-button-opaque-hover-fg) !important;
}


.panelParent
{
    display:inline-grid;
    position:relative;
    width:100%;
    flex-grow:1;
    top:var(--cscale-margin);
    overflow: hidden;
}

.panel
{
    position: relative;
    display: table;
    height:100%;
}

.tileExtended
{
    background-color: transparent;

    display: block;
    position:relative;
    width: 99%;
    max-height:44vw;
    height: 0px;
    margin-bottom:calc(0.25 * var(--cscale));

    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
	animation: ClipIn_Left_TileExtended 0.5s 0.05s 1 normal forwards;
}

.tileA
{
    color: var(--color-button-hollow-default);
    background-color: var(--color-button-hollow-default);

    display: block;
    position:relative;
    width: 100%;
    height: 100%;      
    margin:  0px;
    padding: 0px;

    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
	animation: ClipIn_Left_Tile_Box 0.5s 0.05s 1 normal forwards;
}

.tileAInside
{
    color: var(--color-tile-fg);
    background-color: var(--color-tile-bg);

    display: block;
    position:absolute;
    top: 0%;
    bottom: 0%;
    left: 0%;
    right: 0%;
    margin: var(--cscale-edge);
    padding: 0%;

    clip-path: inherit;
	animation: inherit;
}

.info 
{
    color: var(--color-tile-fg);
    background-color: var(--color-tile-bg);

    font-family: "Roboto Mono", monospace;
    font-size: calc(1 * var(--cscale));
    line-height: calc(1.5 * var(--cscale));
	letter-spacing: calc(-0.025 * var(--cscale));

    position: relative;
    height: 0px;
    padding-left: calc(1.5 * var(--cscale));
    padding-right: calc(2.5 * var(--cscale));
    padding-top:calc(1.5 * var(--cscale));;
    margin-bottom:calc(1.5 * var(--cscale));;

    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
    animation: ClipIn_Left_Info 0.5s 0.25s 1 normal forwards;
}

.infoGrid 
{
  display: grid;
  grid-template-columns: auto auto;
}

.infoGridItem 
{
 height: calc(1.5 * var(--cscale));
}

.imageTR 
{
    float:right;
    position: sticky;
    height: 100%;
    max-width: 50%;
	padding-left: var(--cscale-edge);
	background-color: var(--color-button-hollow-default);
    clip-path: inherit;
}

.imageBC
{
    position: relative;
    place-items:center;
    display:flex;
    height:100%;
    width:100%;
    clip-path: polygon(90% 0, 95% 5%, 100% 5%, 100% 100%, 0 100%, 0 0);
	animation: ClipIn_Left 0.3s 0.0s 1 normal forwards;
}

.imageBC img 
{
    object-fit:fill;
    object-position:center;
    height: 100%;
    clip-path:inherit;
}

.videoBC 
{
    display:block;
    position: relative;
    margin-right:4px;
    margin-bottom:4px;
    top: 0px;
    right: 0px;
    width: 100%;
    max-height: calc(20 * var(--cscale));
    clip-path: polygon(0 0, 0% 100%, 0 100%, 0 0);
    animation: ClipIn_Left_TileExtended 0.5s 0.0s 1 normal forwards;
}


video
{
    clip-path: inherit;
    height:100%;
}

object 
{
    width: 100%;
    height: 100%;
    min-height: inherit;
    overflow: hidden;
}


@keyframes Blinking
{ 
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@keyframes ClipIn_Left 
{ 
    0%   {clip-path: polygon(0 0, 0% 100%, 0 100%, 0 0);} 
    100% {clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);} 
}

@keyframes ClipIn_Left_Info 
{ 
    0%   {height:0px;                       clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    40%  {height:calc(20 * var(--cscale));  clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    60%  {height:calc(20 * var(--cscale));  clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    100% {height:calc(20 * var(--cscale));  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);} 
}

@keyframes ClipIn_Left_TileExtended 
{ 
    0%   {height:0px;                      clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    40%  {height:calc(20 * var(--cscale)); clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    60%  {height:calc(20 * var(--cscale)); clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    100% {height:calc(20 * var(--cscale)); clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);} 
}

@keyframes ClipIn_Left_TileExtendedTall
{ 
    0%   {height:0px;                      clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    40%  {height:calc(30 * var(--cscale)); clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    60%  {height:calc(30 * var(--cscale)); clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    100% {height:calc(30 * var(--cscale)); clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);} 
}

@keyframes ClipIn_Left_Tile 
{ 
    0%   {clip-path: polygon(0   0,  0 6%,  0 6%,  0 100%, 0 100%, 0 0);} 
    100% {clip-path: polygon(95% 0, 97.5% 6%, 100% 6%, 100% 100%, 0 100%, 0 0); } 
}


@keyframes ClipIn_Left_Tile_Box
{ 
    0%   {clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);} 
    100% {clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } 
}

@keyframes ClipIn_Left_TileButton 
{  
    0%   {clip-path: polygon(0 0,  0 20%,  0 20%,  0 100%, 0 100%, 0 0);} 
    25%   {clip-path: polygon(0 0,  0 20%,  0 20%,  0 100%, 0 100%, 0 0);} 
    100% {clip-path: polygon(90% 0, 95% 20%, 100% 20%, 100% 100%, 0 100%, 0 0);} 
}

